force-app/main/default/objects/Embryo_Batch__c/Embryo_Batch__c.object-meta.xml
<CustomObject>
    <label>Embryo Batch</label>
    <nameField>
        <displayFormat>BATCH - {000000}</displayFormat>
        <label>Embryo Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Embryo Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>