force-app/main/default/objects/Embryo_Batch__c/fields/Clinic_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Storage_Location__c</fullName>
    <formula>Storage_Location__r.Clinic__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinic Storage Location</label>
    <type>Text</type>
</CustomField>