force-app/main/default/objects/Embryo_Batch__c/fields/Count_Biopsy__c.field-meta.xml
<CustomField>
    <fullName>Count_Biopsy__c</fullName>
    <label>Count Biopsy</label>
    <summaryFilterItems>
        <field>Embryos__c.LAH__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryos__c.Embryo_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>