force-app/main/default/objects/Embryo_Batch__c/fields/Count_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Count_Frozen__c</fullName>
    <label>Count Frozen</label>
    <summaryFilterItems>
        <field>Embryos__c.Fate__c</field>
        <operation>equals</operation>
        <value>Frozen</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Embryos__c.Exported_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Embryos__c.Embryo_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>