force-app/main/default/objects/Embryo_Batch__c/fields/Count_Not_Viable__c.field-meta.xml
<CustomField>
    <fullName>Count_Not_Viable__c</fullName>
    <label>Count Not Viable</label>
    <summaryFilterItems>
        <field>Embryos__c.Fate__c</field>
        <operation>equals</operation>
        <value>Not Viable</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryos__c.Embryo_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>