force-app/main/default/objects/Embryo_Batch__c/fields/Earliest_Embryo_Freeze_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Embryo_Freeze_Date__c</fullName>
    <label>Earliest Embryo Freeze Date</label>
    <summarizedField>Embryos__c.Storage_Date__c</summarizedField>
    <summaryForeignKey>Embryos__c.Embryo_Batch__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>