force-app/main/default/objects/Embryo_Batch__c/fields/Export_Notes__c.field-meta.xml
<CustomField>
    <fullName>Export_Notes__c</fullName>
    <label>Export Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>