force-app/main/default/objects/Embryo_Batch__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Embryo Batches</relationshipLabel>
    <relationshipName>Embryo_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>