force-app/main/default/objects/Embryo_Batch__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <label>Imported From?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>