force-app/main/default/objects/Embryo_Batch__c/fields/Number_of_Day_7_Embryos_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Day_7_Embryos_Frozen__c</fullName>
    <label>Number of Day 7 Embryos Frozen</label>
    <summaryFilterItems>
        <field>Embryos__c.Cycle_Day__c</field>
        <operation>equals</operation>
        <value>7</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Embryos__c.Fate__c</field>
        <operation>equals</operation>
        <value>Frozen</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryos__c.Embryo_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>