force-app/main/default/objects/Embryo_Batch__c/fields/Original_Storage_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Storage_Expiry_Date__c</fullName>
    <formula>DATE(
  YEAR( Earliest_Embryo_Freeze_Date__c ) + 5,
  MONTH(Earliest_Embryo_Freeze_Date__c ),
  DAY(Earliest_Embryo_Freeze_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Storage Expiry Date</label>
    <type>Date</type>
</CustomField>