force-app/main/default/objects/Embryo_Batch__c/fields/Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor__c</fullName>
    <label>Patient/Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Embryo Batches</relationshipLabel>
    <relationshipName>Embryo_Batches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>