force-app/main/default/objects/Embryo_Batch__c/fields/Reserved_For__c.field-meta.xml
<CustomField>
    <fullName>Reserved_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved For</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Embryo Batches (Reserved For)</relationshipLabel>
    <relationshipName>Embryo_Batches1</relationshipName>
    <type>Lookup</type>
</CustomField>