force-app/main/default/objects/Embryo_Batch__c/listViews/All_Embryo_Batches.listView-meta.xml
<ListView>
    <fullName>All_Embryo_Batches</fullName>
    <columns>NAME</columns>
    <columns>Count_Frozen__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Embryo Batches</label>
</ListView>